Set a default value if only one option is available
At the moment, we only have one model, system, domain, and frequency
available and it’s tedious to have keep selecting that. So if a select
has only one option available, select it by default.

--- a/services/api/src/unified_graphics/templates/includes/header.html
+++ b/services/api/src/unified_graphics/templates/includes/header.html
@@ -4,7 +4,7 @@
   <select id="{{ name }}" name="{{ name }}" {% if not options %} disabled{% endif %}>
     <option></option>
     {% for opt in options|sort(reverse_sort) -%}
-    <option value="{{ opt }}" {% if opt==current %} selected{% endif %}>
+    <option value="{{ opt }}" {% if opt==current or loop.length==1 %} selected{% endif %}>
       {{- opt -}}
     </option>
     {%- endfor %}
