Style the header
Added a number of tokens from USWDS and some utility classes to style
the header for the application. Now we’re cookin’ with hierarchy!

--- a/services/api/src/unified_graphics/static/css/default.css
+++ b/services/api/src/unified_graphics/static/css/default.css
@@ -37,15 +37,23 @@
     --font-family-system: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
       Noto Sans, Ubuntu, Cantarell, Helvetica Neue;
 
+    --font-size-2xs: 0.875rem;
     --font-size-md: 1rem;
+    --font-size-lg: 1.375rem;
     --font-size-xl: 2rem;
 
+    --font-weight-bold: 700;
+
+    --line-height-1: 1;
     --line-height-2: 1.15;
     --line-height-4: 1.5;
 
-    --heading-2: bold var(--font-size-xl) / var(--line-height-2)
+    --heading-1: var(--font-weight-bold) var(--font-size-xl) / var(--line-height-1)
+      var(--font-family-system);
+    --heading-2: var(--font-weight-bold) var(--font-size-lg) / var(--line-height-2)
       var(--font-family-system);
     --body-1: var(--font-size-md) / var(--line-height-4) var(--font-family-system);
+    --small-1: var(--font-size-2xs) / var(--line-height-2) var(--font-family-system);
 
     /* Size Tokens */
     --space-05: 0.25rem;
@@ -136,5 +144,13 @@
 
   form > p {
     --space: var(--space-05);
+  }
+
+  h1 {
+    font: var(--heading-1);
+  }
+
+  h2 {
+    font: var(--heading-2);
   }
 }
