--- a/services/api/src/unified_graphics/static/css/utility.css
+++ b/services/api/src/unified_graphics/static/css/utility.css
@@ -10,6 +10,10 @@
     background-color: var(--primary-darker);
   }
 
+  .text-base-dark {
+    color: var(--base-dark);
+  }
+
   .text-white {
     color: var(--gray-0);
   }
@@ -21,6 +25,27 @@
 
   .heading-2 {
     font: var(--heading-2);
+  }
+
+  .small-1 {
+    font: var(--small-1);
+  }
+
+  .text-upper {
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+  }
+
+  .text-title {
+    text-transform: capitalize;
+  }
+
+  .font-bold {
+    font-weight: var(--font-weight-bold);
+  }
+
+  .line-height-1 {
+    line-height: var(--line-height-1);
   }
 
   /* Spacing */
