--- a/services/api/src/unified_graphics/templates/includes/header.html
+++ b/services/api/src/unified_graphics/templates/includes/header.html
@@ -34,7 +34,7 @@
       {% endfor -%}
     </dl>
   </div>
-  <button onclick="document.getElementById('model-dialog').showModal()">Configure</button>
+  <button class="primary" onclick="document.getElementById('model-dialog').showModal()">Configure</button>
 </header>
 
 <dialog id="model-dialog">
