Add the NOAA logo to the header
I think I need to refactor some of this markdown. The header should be
repeated elements, so the bits with the selected metadata probably
belongs in the main landmark.

--- a/services/api/src/unified_graphics/static/css/default.css
+++ b/services/api/src/unified_graphics/static/css/default.css
@@ -201,6 +201,14 @@
     --button-face-hover: var(--primary-dark);
   }
 
+  .icon {
+    aspect-ratio: 1 / 1;
+    display: inline-block;
+    height: auto;
+    vertical-align: middle;
+    width: 2em;
+  }
+
   :focus {
     outline: var(--border-width-05) solid var(--primary-light);
     outline-offset: var(--border-width-05);
