Move heading styles into utility classes
We’re eschewing global element styles for things like headings to make
it easier to construct a document outline while maintaining an
appropriate visual hierarchy in the app. Since we’re not typesetting any
prose, it will be easier to do this with classes and avoid having to
battle element styles.

--- a/services/api/src/unified_graphics/static/css/utility.css
+++ b/services/api/src/unified_graphics/static/css/utility.css
@@ -23,6 +23,10 @@
     font: var(--body-1);
   }
 
+  .heading-1 {
+    font: var(--heading-1);
+  }
+
   .heading-2 {
     font: var(--heading-2);
   }
