--- a/services/api/src/unified_graphics/templates/includes/header.html
+++ b/services/api/src/unified_graphics/templates/includes/header.html
@@ -19,7 +19,7 @@
         <img class="icon" src="{{ url_for('static', filename='icon.svg') }}" alt="NOAA" width="360"
           height="360">&nbsp;Unified Graphics
       </p>
-      <h1>
+      <h1 class="heading-1">
         {%- if form.model -%}
         {{ form.model }} {{ form.initialization_time }}
         {%- else -%}
