--- a/services/api/src/unified_graphics/templates/includes/header.html
+++ b/services/api/src/unified_graphics/templates/includes/header.html
@@ -22,6 +22,7 @@
       <h1 class="heading-1">
         {%- if form.model -%}
         {{ form.model }} {{ form.initialization_time }}
+        {%- if variable %} &horbar; <span class="text-title">{{ variable }}</span>{% endif %}
         {%- else -%}
         Please Select a Model Run
         {%- endif -%}
