Add a little padding to the select elements
The selects feel a little cramped, so I added some padding.
Unfortunately, this has no effect on the arrow icon in the select, so
things look a little weird now.

--- a/services/api/src/unified_graphics/static/css/default.css
+++ b/services/api/src/unified_graphics/static/css/default.css
@@ -193,6 +193,10 @@
     --button-face-hover: var(--primary-dark);
   }
 
+  select {
+    padding: var(--space-05);
+  }
+
   .icon {
     aspect-ratio: 1 / 1;
     display: inline-block;
