Create a new label-1 utility class
Refactor the styles from the <dd> elements in our header to a text
preset utility class that we can also apply to labels in forms.

--- a/services/api/src/unified_graphics/templates/includes/header.html
+++ b/services/api/src/unified_graphics/templates/includes/header.html
@@ -18,7 +18,7 @@
     <dl class="cluster">
       {% for meta in ["system", "domain", "background"] -%}
       <div>
-        <dt class="small-1 text-base-dark text-title font-bold line-height-1">{{ meta }}</dt>
+        <dt class="label-1">{{ meta }}</dt>
         <dd>{{ form.get(meta, "None selected") }}</dd>
       </div>
       {% endfor -%}
