--- a/services/api/src/unified_graphics/static/css/utility.css
+++ b/services/api/src/unified_graphics/static/css/utility.css
@@ -31,6 +31,14 @@
     font: var(--heading-2);
   }
 
+  .label-1 {
+    color: var(--base-dark);
+    font: var(--small-1);
+    font-weight: var(--font-weight-bold);
+    line-height: var(--line-height-1);
+    text-transform: capitalize;
+  }
+
   .small-1 {
     font: var(--small-1);
   }
