Add some properties to begin animating the dialog

--- a/services/api/src/unified_graphics/static/css/default.css
+++ b/services/api/src/unified_graphics/static/css/default.css
@@ -119,6 +119,7 @@
     border: none;
     border-radius: var(--radius-lg);
     box-shadow: var(--shadow-4);
+    display: grid;
     gap: var(--space, var(--space-2));
     grid-template-rows: auto 1fr auto;
     inline-size: min(90vi, var(--size-mobile-lg));
@@ -128,10 +129,12 @@
     max-block-size: 90dvb;
     overflow: clip;
     position: fixed;
+    transition: opacity 500ms ease;
   }
 
-  dialog[open] {
-    display: grid;
+  dialog:not([open]) {
+    opacity: 0;
+    visibility: hidden;
   }
 
   dialog::backdrop {
