Style the dialog to create a little more hierarchy
I added some background color and adjusted the spacing to distinguish
the header and footer in the dialog from the main content area. Also
added a cancel button that needs some styles.

--- a/services/api/src/unified_graphics/static/css/utility.css
+++ b/services/api/src/unified_graphics/static/css/utility.css
@@ -3,9 +3,11 @@
   .bg-white {
     background-color: var(--gray-0);
   }
+
   .bg-primary-dark {
     background-color: var(--primary-dark);
   }
+
   .bg-primary-darker {
     background-color: var(--primary-darker);
   }
@@ -72,6 +74,10 @@
 
   .justify {
     justify-content: space-between;
+  }
+
+  .justify-end {
+    justify-content: end;
   }
 
   /* Border */
