--- a/services/api/src/unified_graphics/static/css/default.css
+++ b/services/api/src/unified_graphics/static/css/default.css
@@ -116,11 +116,11 @@
   }
 
   dialog {
+    background-color: var(--base-lightest);
     border: none;
     border-radius: var(--radius-lg);
     box-shadow: var(--shadow-4);
     display: grid;
-    gap: var(--space, var(--space-2));
     grid-template-rows: auto 1fr auto;
     inline-size: min(90vi, var(--size-mobile-lg));
     inset: 0;
@@ -128,6 +128,7 @@
     max-block-size: 90vb;
     max-block-size: 90dvb;
     overflow: clip;
+    padding: 0;
     position: fixed;
     transition-duration: 300ms;
     transition-property: opacity, transform, visibility;
@@ -137,6 +138,17 @@
   dialog:not([open]) {
     opacity: 0;
     visibility: hidden;
+  }
+
+  dialog > * {
+    background-color: var(--gray-0);
+    padding-block: var(--space, var(--space-105));
+    padding-inline: var(--space-105);
+  }
+
+  dialog > header,
+  dialog > footer {
+    background-color: transparent;
   }
 
   @media screen and (prefers-reduced-motion: no-preference) {
