--- a/services/api/src/unified_graphics/static/css/default.css
+++ b/services/api/src/unified_graphics/static/css/default.css
@@ -59,6 +59,7 @@
     --small-1: var(--font-size-2xs) / var(--line-height-2) var(--font-family-system);
 
     /* Size Tokens */
+    --space-2px: 2px;
     --space-05: 0.25rem;
     --space-105: 0.75rem;
     --space-205: 1.25rem;
@@ -182,7 +183,6 @@
     --_border: var(--button-border, var(--_face));
     --_border-active: var(--button-border-active, var(--_button-border));
     --_border-hover: var(--button-border-hover, var(--_button-border));
-    --_border-width: var(--button-border-width, 0);
     --_face: var(--button-face, var(--base));
     --_face-active: var(--button-face-active, var(--_face));
     --_face-hover: var(--button-face-hover, var(--_face));
@@ -193,8 +193,9 @@
     --_text-hover: var(--button-text-hover, var(--_text));
 
     background-color: var(--_face);
-    border: var(--_border-width) solid var(--_border);
+    border: none;
     border-radius: var(--radius-md);
+    box-shadow: inset 0 0 0 var(--space-2px) var(--_border);
     color: var(--_text);
     font-weight: var(--font-weight-bold);
     line-height: 1;
@@ -204,13 +205,13 @@
 
   button:hover {
     background-color: var(--_face-hover);
-    border-color: var(--_border-hover);
+    box-shadow: inset 0 0 0 var(--space-2px) var(--_border-hover);
     color: var(--_text-hover);
   }
 
   button:active {
     background-color: var(--_face-active);
-    border-color: var(--_border-active);
+    box-shadow: inset 0 0 0 var(--space-2px) var(--_border-active);
     color: var(--_text-active);
   }
 
@@ -218,6 +219,17 @@
     --button-face: var(--primary);
     --button-face-active: var(--primary-darker);
     --button-face-hover: var(--primary-dark);
+  }
+
+  button.outline {
+    --button-border: var(--primary);
+    --button-border-active: var(--primary-darker);
+    --button-border-hover: var(--primary-dark);
+    --button-border-width: var(--space-05);
+    --button-face: transparent;
+    --button-text: var(--primary);
+    --button-text-active: var(--primary-darker);
+    --button-text-hover: var(--primary-dark);
   }
 
   select {
