Reset the form on cancel

--- a/services/api/src/unified_graphics/templates/includes/model-dialog.html
+++ b/services/api/src/unified_graphics/templates/includes/model-dialog.html
@@ -34,7 +34,8 @@
 
   </form>
   <footer class="cluster justify-end">
-    <button class="outline" onclick="this.closest('dialog').close('cancel')">Close</button>
+    <button class="outline" type="reset" form="model-form"
+      onclick="this.closest('dialog').close('cancel')">Close</button>
     <button class="primary" form="model-form">Load</button>
   </footer>
 </dialog>
