Add some boilerplate for the time series chart

--- a/services/api/src/unified_graphics/templates/layouts/diag.html
+++ b/services/api/src/unified_graphics/templates/layouts/diag.html
@@ -25,6 +25,13 @@
         <span class="axis-x title" slot="title-x">Observation &minus; Forecast</span>
       {%- endif %}
     </chart-container>
+    {% if form.variable != "uv" -%}
+      <chart-container class="padding-2 radius-md bg-white shadow-1">
+        <span class="axis-y title" slot="title-y">Observation &minus; Forecast</span>
+        <chart-timeseries id="history-{{ minim_loop }}"></chart-timeseries>
+        <span class="axis-x title" slot="title-x">Initialization Time</span>
+      </chart-container>
+    {%- endif %}
     <chart-container class="padding-2 radius-md bg-white shadow-1">
       <chart-map id="observations-{{ minim_loop }}"
         src="{{ map_url[minim_loop] }}"
