--- a/services/api/src/unified_graphics/templates/layouts/diag.html
+++ b/services/api/src/unified_graphics/templates/layouts/diag.html
@@ -31,7 +31,8 @@
 
         <chart-container class="padding-2 radius-md bg-white shadow-1">
           <span class="axis-y title" slot="title-y">Observation &minus; Forecast</span>
-          <chart-timeseries id="history-{{ minim_loop }}" src="{{ history_url[minim_loop] }}"></chart-timeseries>
+          <chart-timeseries id="history-{{ minim_loop }}" src="{{ history_url[minim_loop] }}"
+            current="{{ form.get("initialization_time") }}"></chart-timeseries>
           <span class="axis-x title" slot="title-x">Initialization Time</span>
         </chart-container>
       </div>
