Add an experimental label to the site
Make it clear that the model data on display is from experimental
versions of the models. This may actually be something we want to
capture in the database in the future, in case we display
non-experimental models as well.

--- a/src/unified_graphics/static/css/default.css
+++ b/src/unified_graphics/static/css/default.css
@@ -260,3 +260,9 @@
     outline-color: transparent;
   }
 }
+
+small.caps {
+  font-size: inherit;
+  font-variant: all-small-caps;
+  letter-spacing: 0.03em;
+}
