--- a/src/unified_graphics/templates/includes/header.html
+++ b/src/unified_graphics/templates/includes/header.html
@@ -8,7 +8,10 @@
       <h1 class="heading-1">
         {%- if form.model -%}
         {{ form.model }} {{ form.initialization_time }}
-        {%- if variable %} &horbar; <span class="text-title">{{ variable }}</span>{% endif %}
+        {%- if variable %}
+        &horbar; <span class="text-title">{{ variable }}</span>
+        <small class="caps text-base-dark"><strong>Experimental</strong></small>
+        {%- endif %}
         {%- else -%}
         Please Select a Model Run
         {%- endif -%}
